[gd_scene load_steps=4 format=3 uid="uid://hud_main"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]
[ext_resource type="Script" path="res://scripts/ui/minimap.gd" id="2_minimap"]
[ext_resource type="Script" path="res://scripts/ui/dialogue_ui.gd" id="3_dialogue"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

; ── Minimap (top-right) ───────────────────────────────────────────────────────
[node name="Minimap" type="Control" parent="."]
script = ExtResource("2_minimap")
anchor_left = 1.0
anchor_right = 1.0
offset_left = -108.0
offset_right = -4.0
offset_top = 4.0
offset_bottom = 128.0

; ── Health bar (top-left) ─────────────────────────────────────────────────────
[node name="HealthBar" type="Control" parent="."]
offset_left = 8.0
offset_right = 108.0
offset_top = 8.0
offset_bottom = 24.0

[node name="BG" type="ColorRect" parent="HealthBar"]
color = Color(0.15, 0.0, 0.0, 0.8)
size = Vector2(100, 10)

[node name="Fill" type="ColorRect" parent="HealthBar"]
color = Color(0.8, 0.1, 0.1, 1)
size = Vector2(80, 10)

[node name="HPLabel" type="Label" parent="HealthBar"]
text = "100/100 HP"
position = Vector2(0, -1)
theme_override_font_sizes/font_size = 8

; ── Inventory bar (bottom, full width) ───────────────────────────────────────
[node name="InventoryBar" type="Control" parent="."]
anchor_left = 0.0
anchor_right = 1.0
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -32.0
offset_bottom = -4.0
visible = true

[node name="BG" type="ColorRect" parent="InventoryBar"]
color = Color(0, 0, 0, 0.65)
anchor_right = 1.0
size_flags_horizontal = 3
offset_bottom = 28.0

[node name="Label" type="Label" parent="InventoryBar"]
anchor_right = 1.0
offset_top = 4.0
offset_bottom = 24.0
text = "Inventory empty  |  E to toggle"
theme_override_font_sizes/font_size = 10
vertical_alignment = 1
clip_text = true

; ── Biome label (top-centre) ──────────────────────────────────────────────────
[node name="BiomeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_right = 80.0
offset_top = 6.0
offset_bottom = 22.0
horizontal_alignment = 1
theme_override_font_sizes/font_size = 11
modulate = Color(1, 1, 1, 0.85)

; ── DialogueUI (bottom panel, hidden until NPC interaction) ──────────────────
[node name="DialogueUI" type="CanvasLayer" parent="."]
script = ExtResource("3_dialogue")

[node name="Panel" type="PanelContainer" parent="DialogueUI"]
anchor_left = 0.0
anchor_right = 1.0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
offset_top = -130.0
offset_bottom = -8.0
visible = false

[node name="HBox" type="HBoxContainer" parent="DialogueUI/Panel"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PortraitSlot" type="Control" parent="DialogueUI/Panel/HBox"]
custom_minimum_size = Vector2(56, 56)

[node name="VBox" type="VBoxContainer" parent="DialogueUI/Panel/HBox"]
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="DialogueUI/Panel/HBox/VBox"]
text = ""
theme_override_font_sizes/font_size = 12

[node name="TextLabel" type="RichTextLabel" parent="DialogueUI/Panel/HBox/VBox"]
size_flags_vertical = 3
bbcode_enabled = true
fit_content = false

[node name="ContinueHint" type="Label" parent="DialogueUI/Panel/HBox/VBox"]
text = "[ Press F or Click to continue ]"
theme_override_font_sizes/font_size = 9
modulate = Color(0.8, 0.8, 0.4, 1)
visible = false
